# ckeletin-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CONFORMANCE.md  Cargo.toml  Justfile  README.md  conformance-mapping.toml  conformance-report.json  deny.toml  lefthook.yml
.ckeletin/: CHANGELOG.md  Justfile
.ckeletin/conform/: Cargo.toml
.ckeletin/conform/src/: main.rs
.ckeletin/crate/: Cargo.toml
.ckeletin/crate/src/: build_info.rs  config.rs  lib.rs  logging.rs  output.rs  project_config.rs  scaffold_scan.rs
.ckeletin/crate/tests/: arch_allowlist.rs  consumer_layout_fixtures.rs  doctor.rs  health.rs  init_smoke.rs  logging_init.rs  logging_permissions.rs  scaffold_leftover_guard.rs  update_guard.rs  update_mechanism.rs  violation_drift_guard.rs
.ckeletin/scripts/: init.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  spec-drift.yml
conformance/: requirements.json
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs  ping.rs  root.rs  version.rs
crates/cli/tests/: cli.rs  license_integrity.rs
crates/conform/: Cargo.toml
crates/conform/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: ping.rs
crates/domain/tests/: architecture_violations.rs
crates/domain/tests/violations/: domain_imports_ckeletin.stderr  domain_imports_infrastructure.rs  domain_imports_infrastructure.stderr
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config.rs  lib.rs  logging.rs  output.rs
crates/infrastructure/tests/: logging_init.rs
crates/infrastructure/tests/violations/: infra_imports_domain.rs  infra_imports_domain.stderr
docs/plans/: 2026-04-14-framework-update-mechanism.md
docs/specs/: 2026-04-14-framework-update-mechanism.md
scripts/: conform.sh
