[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ckeletin-rust"
path = "src/main.rs"

# CLI crate: the ONLY crate that depends on both domain and infrastructure.
# This is where directed dependencies converge (CKSPEC-ARCH-002).
[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
clap = { workspace = true }
owo-colors = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
